kubernetes/deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: app-deployment
  namespace: app-ns
  labels:
    app: app-book

spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-book

  template:
    metadata:
      labels:
        app: app-book

    spec:
      containers:
      - name: app-container
        image: priyanshijat6701/appointment-image
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi

          limits:
            cpu: 200m
            memory: 512Mi
