kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app-svc
  namespace: app-ns
spec:
  selector:
    app: app-book

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
    type: NodePort
