kubernetes/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: booking-ing
  namespace: app-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-svc
            port:
              number: 3000
